--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>여기는 인덱스 입니다.</h1>
+    {% for post in posts %}
+        <h1>{{post.id}}</h1>
+        <h2>{{post.title}}</h2>
+        <h3>{{post.content}}</h3>
+        <h4>{{post.created_at}}</h4>
+    {% endfor %}
 </body>
 </html>
