--- a/templates/new.html
+++ b/templates/new.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block body_block %}
     <form action="/posts/create">
         <input type="text" name="title">
         <input type="text" name="content">
         <input type="submit">
     </form>
-</body>
-</html>
+{% endblock %} 
