--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block body_block %}
     <h1>여기는 인덱스 입니다.</h1>
     {% for post in posts %}
         <h1>{{post.id}}</h1>
         <h2>{{post.title}}</h2>
         <h3>{{post.content}}</h3>
         <h4>{{post.created_at}}</h4>
+        <a href="/posts/{{post.id}}">글보기</a>
     {% endfor %}
-</body>
-</html>
+{% endblock %}    
