--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <h1>여기는 navbar가 들어갈 공간입니다..</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="/">Board</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="/posts/new">New post<span class="sr-only">(current)</span></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
         {% block body_block %}
         {% endblock %}
     </div>
