--- a/templates/new.html
+++ b/templates/new.html
@@ -1,8 +1,19 @@
 {% extends 'base.html' %}
 {% block body_block %}
+    <!--<form action="/posts/create">-->
+    <!--    <input type="text" name="title">-->
+    <!--    <input type="text" name="content">-->
+    <!--    <input type="submit">-->
+    <!--</form>-->
     <form action="/posts/create">
-        <input type="text" name="title">
-        <input type="text" name="content">
-        <input type="submit">
+      <div class="form-group">
+        <label for="title">제목</label>
+        <input name="title" type="text" class="form-control" id="title" placeholder="제목을 입력해주세요!">
+      </div>
+      <div class="form-group">
+        <label for="content">내용</label>
+        <textarea name="content" id="content" class="form-control"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 {% endblock %} 
