--- a/templates/read.html
+++ b/templates/read.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block body_block %}
-{{post.id}}
-{{post.title}}
-{{post.content}}
-{{post.created_at}}
+    <h1>{{post.id}}</h1>
+    <h1>{{post.title}}</h1>
+    <h1>{{post.content}}</h1>
+    <h1>{{post.created_at}}</h1>
+    <a href="/posts/{{post.id}}/delete">삭제</a>
 {% endblock %} 
