--- a/templates/read.html
+++ b/templates/read.html
@@ -5,4 +5,5 @@
     <h1>{{post.content}}</h1>
     <h1>{{post.created_at}}</h1>
     <a href="/posts/{{post.id}}/delete">삭제</a>
+    <a href="/posts/{{post.id}}/edit">수정</a>
 {% endblock %} 
