--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,14 +5,14 @@
     <!--    <input type="text" name="content">-->
     <!--    <input type="submit">-->
     <!--</form>-->
-    <form action="/posts/create" method="post">
+    <form action="/posts/{{post.id}}/update" method="post">
       <div class="form-group">
         <label for="title">제목</label>
-        <input name="title" type="text" class="form-control" id="title" placeholder="제목을 입력해주세요!">
+        <input value="{{post.title}}" name="title" type="text" class="form-control" id="title" placeholder="제목을 입력해주세요!">
       </div>
       <div class="form-group">
         <label for="content">내용</label>
-        <textarea name="content" id="content" class="form-control"></textarea>
+        <textarea name="content" id="content" class="form-control">{{post.content}}</textarea>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
