--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,10 @@
                 <h5 class="card-title">{{post.title}}</h5>
                 <p class="card-text">{{post.content}}</p>
                 <a href="/posts/{{post.id}}" class="btn btn-primary">Go somewhere</a>
+                <form action="">
+                    <input type="text" name="content"/>
+                    <input type="submit">
+                </form>
               </div>
             </div>
         </div>
